--- a/templates/proprietes/documents/document_archive.html
+++ b/templates/proprietes/documents/document_archive.html
@@ -187,7 +187,7 @@
                 <button type="submit" class="btn btn-primary me-2">
                     <i class="fas fa-search me-2"></i>Rechercher
                 </button>
-                <a href="{% url 'proprietes:document_archive' %}" class="btn btn-outline-secondary">
+                <!-- <a href="{% url 'proprietes:document_archive' %}" class="btn btn-outline-secondary"> -->
                     <i class="fas fa-times me-2"></i>Réinitialiser
                 </a>
             </div>
