--- a/templates/proprietes/documents/document_quick_upload.html
+++ b/templates/proprietes/documents/document_quick_upload.html
@@ -105,7 +105,7 @@
             <p class="text-muted">Ajoutez rapidement des documents à vos entités</p>
         </div>
         <div>
-            <a href="{% url 'proprietes:document_archive' %}" class="btn btn-outline-secondary">
+            <!-- <a href="{% url 'proprietes:document_archive' %}" class="btn btn-outline-secondary"> -->
                 <i class="fas fa-arrow-left me-2"></i>Retour à l'archivage
             </a>
         </div>
