--- a/templates/proprietes/documents/document_search_advanced_improved.html
+++ b/templates/proprietes/documents/document_search_advanced_improved.html
@@ -161,7 +161,7 @@
             <p class="text-muted">Trouvez rapidement vos documents avec des filtres avancés</p>
         </div>
         <div class="d-flex gap-2">
-            <a href="{% url 'proprietes:document_archive' %}" class="btn btn-outline-primary">
+            <!-- <a href="{% url 'proprietes:document_archive' %}" class="btn btn-outline-primary"> -->
                 <i class="fas fa-archive me-2"></i>Archivage
             </a>
             <a href="{% url 'proprietes:document_export' %}" class="btn btn-outline-success">
